fixed terms checkbox label position on smaller screens

--- a/styles/partials/_form.less
+++ b/styles/partials/_form.less
@@ -208,33 +208,24 @@ select[id="preferred-lang"] {
 
 .form-control__terms {
   width: 100%;
-  position: relative;
 
   input {
     width: auto;
     box-shadow: none;
+    margin-right: 5px;
   }
 
   label {
-    padding-top: 13px;
-    padding-left: 30px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-}
+    background: @light-blue;
+    border: 2px solid @light-blue;
+    border-radius: 3px;
+    padding: 10px;
+    width: 100%;
 
-.terms__container {
-  background: @light-blue;
-  border: 2px solid @light-blue;
-  border-radius: 3px;
-  padding: 10px;
-
-  &:hover,
-  &:focus {
-    border: 2px solid @medium-blue;
+    &:hover,
+    &:focus {
+      border: 2px solid @medium-blue;
+    }
   }
 }
 
