--- a/styles/style.css
+++ b/styles/style.css
@@ -466,30 +466,22 @@ select[id="preferred-lang"] {
 }
 .form-control__terms {
   width: 100%;
-  position: relative;
 }
 .form-control__terms input {
   width: auto;
   -webkit-box-shadow: none;
           box-shadow: none;
+  margin-right: 5px;
 }
 .form-control__terms label {
-  padding-top: 13px;
-  padding-left: 30px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-.terms__container {
   background: #d6e1eb;
   border: 2px solid #d6e1eb;
   border-radius: 3px;
   padding: 10px;
+  width: 100%;
 }
-.terms__container:hover,
-.terms__container:focus {
+.form-control__terms label:hover,
+.form-control__terms label:focus {
   border: 2px solid #6d92b5;
 }
 .terms-checked {
